<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_Browse"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_Browse" />

    <item
        android:id="@+id/navigation_Home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title= "@string/title_Main_Feed" />

    <item
        android:id="@+id/navigation_Commented"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/title_Commented" />
    <item
        android:id="@+id/navigation_Account"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_Account" />

</menu>
