<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/confirm_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancel"
        android:layout_centerHorizontal="true"
        android:text="@string/action_confim" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:text="@string/action_cancel" />


    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/select_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="170dp"
        android:text="@string/change_profilePicture"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="215dp"
        android:ems="10"
        android:text="NAME:"
        android:textColor="#000000"
        android:textSize="20dp" />


    <TextView
        android:id="@+id/confirm_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirm_password_edit"
        android:layout_alignParentStart="true"
        android:text="Confirm Password: "
        android:textColor="#000000"
        android:textSize="20dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/new_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_password_edit"
        android:layout_alignParentStart="true"
        android:text="New Password: "
        android:textColor="#000000"
        android:textSize="20dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/email_text2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="263dp"
        android:text="EMAIL:"
        android:textColor="#000000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/name_text"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/email_text2"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <CheckBox
        android:id="@+id/change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_password_text"
        android:layout_alignParentStart="true"
        android:text="Change Password?" />

    <EditText
        android:id="@+id/new_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirm_password_text"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="visible" />

    <EditText
        android:id="@+id/confirm_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirm_changes"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="visible" />

</RelativeLayout>